[package]
name = "common"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
salvo = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
# rnacos = { workspace = true }
nacos-sdk = { workspace = true, features = ["naming"] }
config = { workspace = true }
env_logger = { workspace = true }
toml = { workspace = true }